--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,9 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    </div>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
