--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,15 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sonsie+One&family=Supermercado+One&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
-
-    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     
   </head>
 
   <body>
-    <div id="app">
-      <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    </div>
+    <div id="app"></div>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
